--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@romellogoodman/flow-field",
   "version": "0.0.0",
-  "description": "A library for scripting SVGs.",
+  "description": "A library for generating flow fields.",
   "scripts": {
     "dev": "microbundle watch",
     "build": "microbundle",
@@ -85,5 +85,8 @@
     "bracketSpacing": false,
     "singleQuote": true
   },
-  "dependencies": {}
+  "dependencies": {
+    "random-js": "^2.1.0",
+    "simplex-noise": "^3.0.0"
+  }
 }
